[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/ui/controller/controller.gd" type="Script" id=1]
[ext_resource path="res://resources/img/buttons/joystick_down.png" type="Texture" id=2]
[ext_resource path="res://resources/img/buttons/confirm.png" type="Texture" id=3]
[ext_resource path="res://resources/img/buttons/confirm_down.png" type="Texture" id=4]
[ext_resource path="res://resources/img/buttons/cancel.png" type="Texture" id=5]
[ext_resource path="res://resources/img/buttons/cancel_down.png" type="Texture" id=6]
[ext_resource path="res://resources/img/buttons/pause.png" type="Texture" id=7]
[ext_resource path="res://resources/img/buttons/pause_down.png" type="Texture" id=8]

[node name="Controller" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
always_show = false

[node name="Directional" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = -256.0
margin_right = 256.0
margin_bottom = -64.0
rect_min_size = Vector2( 192, 192 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Rect" ]

[node name="Confirm" type="TextureButton" parent="." index="1"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -224.0
margin_right = -96.0
margin_bottom = -128.0
rect_min_size = Vector2( 96, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect" ]

[node name="Cancel" type="TextureButton" parent="." index="2"]

anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -224.0
margin_right = -224.0
margin_bottom = -128.0
rect_min_size = Vector2( 96, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Pause" type="TextureButton" parent="." index="3"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -112.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 112.0
rect_min_size = Vector2( 96, 96 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5
_sections_unfolded = [ "Rect" ]

[connection signal="button_down" from="Confirm" to="." method="_on_Confirm_button_down"]

[connection signal="button_up" from="Confirm" to="." method="_on_Confirm_button_up"]

[connection signal="button_down" from="Cancel" to="." method="_on_Cancel_button_down"]

[connection signal="button_up" from="Cancel" to="." method="_on_Cancel_button_up"]

[connection signal="button_down" from="Pause" to="." method="_on_Pause_button_down"]

[connection signal="button_up" from="Pause" to="." method="_on_Pause_button_up"]


